mcp-server/test.log
file:///C:/wamp64/www/wp-agent/mcp-server/test-all-commands.js:16
         results.push({ name, status: 'PASSED', data: Array.isArray(res) ? \`Array[\${res.length}]\` : typeof res === 'object' ? 'Object' : typeof res });
                                                                           ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at #translate (node:internal/modules/esm/loader:473:20)
    at afterLoad (node:internal/modules/esm/loader:529:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:534:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:577:36)
    at afterResolve (node:internal/modules/esm/loader:625:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:631:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:650:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v24.13.1
